# Li_Dantam_2023_Paper_implementation

./: README.md
manifold_planning/: CMakeLists.txt
manifold_planning/include/: AStar.hpp  CSVWriter.hpp  CoxeterTriangulation.hpp  ElasticUpdate.hpp  Graph.hpp  ImplicitModel.hpp  Manifold.hpp  PyBulletSDF.hpp  SDFOracle.hpp  SVMModel.hpp  config.hpp  coxeter_triangulation.hpp  elastic_update.hpp  facet_checker.hpp  math_utils.hpp  prm.hpp  robot_interface.hpp  sdcl.hpp  svm_manifold.hpp  visualization.hpp
manifold_planning/plotting/: plot_c_space.py
manifold_planning/pybullet/: sdf_server.py  simulation2.py
manifold_planning/scripts/: visualize.py
manifold_planning/simulations/: simulation1.py
manifold_planning/src/: AStar.cpp  Coxeter.cpp  CoxeterTriangulation.cpp  ElasticUpdate.cpp  Graph.cpp  Manifold.cpp  SVMModel.cpp  coxeter_triangulation.cpp  elastic_update.cpp  facet_checker.cpp  main.cpp  prm.cpp  robot_interface.cpp  sdcl.cpp  svm_manifold.cpp  visualization.cpp
manifold_planning/visualization/: play_trajectory.py  plot_cspace.py
